后端完成至统计数据更新

--- a/app.properties
+++ b/app.properties
@@ -1,11 +1,11 @@
 server.port=9888
 server.rpc.port=6666
 db.driver=mysql
-db.url=127.0.0.1:3306
+db.url=116.62.121.33:3306
 db.databases=tennismoment_app
 db.username=root
-db.password=
+db.password=12345678
 
-redis.url=127.0.0.1:6379
+redis.url=116.62.121.33:6379
 redis.db=1
 redis.password=
